<resources>
    <string name="app_name">WGU</string>
    <string name="title_activity_new_term">New Term</string>
    <string name="title_activity_new_course">New Course</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="term_title_hint">Enter term title</string>
    <string name="save_text">Save</string>
    <string name="empty">Enter information</string>
    <string name="description_text">Plus button Icon</string>
    <string name="update_text">Update</string>
    <string name="delete_text">Delete</string>
    <string name="add_course_text">Add Course</string>
    <string name="term_start_hint">Term start</string>
    <string name="term_end_hint">Term end</string>
    <string name="term_button_text">Terms</string>
    <string name="instructor_button_text">Instructors</string>
    <string name="edit_button">Edit</string>
    <string name="cancel_edit_button">Edit</string>
    <string name="row_term_title">TextView</string>
    <string name="row_term_start">TextView</string>
    <string name="row_term_end">TextView</string>
    <string name="term_status_hint">Enter course status</string>
    <string name="row_course_title">TextView</string>
    <string name="row_course_start">TextView</string>
    <string name="row_course_end">TextView</string>
    <string name="row_course_status">TextView</string>
    <string name="course_button_text">Courses</string>
    <string name="add_instructor_button">Add Instructor</string>
    <string name="course_title_hint">Enter course title</string>
    <string name="course_start_hint">Enter course start date</string>
    <string name="course_end_hint">Enter course end date</string>
    <string name="course_note_hint">Enter course notes</string>
    <string name="course_start_title">Course start date</string>
    <string name="course_end_title">Course end date</string>
    <string name="radio_in_progress">In progress</string>
    <string name="radio_completed">Completed</string>
    <string name="radio_dropped">Dropped</string>
    <string name="radio_plan_to_take">Plan to take</string>
    <string name="radio_performance">Performance assessment</string>
    <string name="radio_objective">Objective assessment</string>
    <string name="text_instructor">Instructors</string>
    <string name="text_assessment">Assessments</string>

    <string name="row_assessment_title">TextView</string>
    <string name="row_assessment_end">TextView</string>
    <string name="row_assessment_type">TextView</string>
    <string name="assessment_button_text">Assessments</string>
    <string name="assessment_title_hint">Enter assessment title</string>
    <string name="assessment_end_hint">Enter assessment end date</string>
    <string name="assessment_type_hint">Enter assessment type</string>
</resources>