<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Instructor">

    <EditText
        android:id="@+id/enter_instructor_name"
        style="@style/formStyle"
        android:hint="@string/assessment_title_hint"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enter_instructor_email"
        style="@style/formStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/assessment_end_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_instructor_name" />

    <EditText
        android:id="@+id/enter_instructor_number"
        style="@style/formStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/assessment_end_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_instructor_email" />

<!--    <EditText-->
<!--        android:id="@+id/enter_assessment_type"-->
<!--        style="@style/formStyle"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:autofillHints=""-->
<!--        android:ems="10"-->
<!--        android:hint="@string/assessment_type_hint"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/enter_assessment_end" />-->

    <Button
        android:id="@+id/save_instructor_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margins"
        android:padding="@dimen/general_padding"
        android:text="@string/save_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_instructor_number" />

    <Button
        android:id="@+id/update_instructor_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/update_text"
        app:layout_constraintEnd_toStartOf="@+id/delete_instructor_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_instructor_button" />

    <Button
        android:id="@+id/delete_instructor_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/delete_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/update_instructor_button"
        app:layout_constraintTop_toBottomOf="@+id/save_instructor_button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_instructor_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:contentDescription="@string/edit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>